<resources>
    <string name="app_name">中新與情</string>
    <string name="logo_tip">大数据时代的舆情管家和决策参谋</string>
    <string name="login_user_hint">用户名/邮箱/手机号</string>
    <string name="login_pwd_hint">登录密码</string>
    <string name="login">登&#160;录</string>
    <string name="login_register">申请账号</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="name">姓名</string>
    <string name="name_err">请输入姓名</string>
    <string name="name_hint">请填写您的姓名</string>
    <string name="company">单位</string>
    <string name="company_err">请输入单位名称</string>
    <string name="company_hint">请填写您所在的单位</string>
    <string name="tel">电话</string>
    <string name="tel_err">请输入电话号吗</string>
    <string name="tel_hint">请填写您的手机号码</string>
    <string name="email">邮箱</string>
    <string name="email_err">请输入电子邮箱</string>
    <string name="email_hint">请填写您的电子邮箱</string>
    <string name="regist_tip">注：请您如实填写您的个人信息，以便我们给您匹配专人账号，及推送更精确更专业的内容。</string>
    <string name="submit_regist">提交申请</string>
    <string name="apply_ok">提交成功！</string>
    <string name="apply_no">提交失败！</string>
    <string name="loading_more">加载更多...</string>
    <string name="pwd_err">请输入密码</string>
    <string name="setting_waring">&#160;&#160;與情预警</string>
    <string name="setting_preference">&#160;&#160;偏好设置</string>
    <string name="setting_preference_1">偏好设置</string>
    <string name="setting_collection">&#160;&#160;收藏夹</string>
    <string name="setting_collection_1">收藏夹</string>
    <string name="setting_more">&#160;&#160;更多</string>
    <string name="user_info">用户信息</string>
    <string name="word_size">文字大小</string>
    <string name="word_size_0">(%1$s)</string>
    <string name="word_size_1">大</string>
    <string name="word_size_2">中</string>
    <string name="word_size_3">小</string>
    <string name="feed_back">意见反馈</string>
    <string name="help">使用帮助</string>
    <string name="about">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="more">更多</string>
    <string name="about_content">"&#160;&#160;&#160;&#160;&#160;&#160;&#160;北京中新海针信息技术有限公司是一家以舆情监测、数据挖掘和决策支持为核心竞争力的新型数据分析与媒体传播公司。以中央媒体中国新闻社为背景的中新海针致力于在信息时代下运用大数据理念和技术，基于在新闻行业积累多年的专业素养和深厚基础，通过对线上线下的海量数据做进一步整合与深度分析，做大数据时代的专业信息管家服务提供商。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;以舆情监控领域来说，中新舆情依托中国新闻社遍布全球的采编网络，利用智能采集技术、数据挖掘技术，通过对海内外互联网及平面报刊海量数据信息的自动获取、管理、挖掘、分析、展示等，最终形成危机预警、专业报告、传播路径分析等大数据产品，为客户全面掌握舆情动态，做出正应对策略提供决策支持，其中包括：政务舆情服务、企业情报服务、数据开发服务以及舆情拓展服务。</string>
    <string name="commit">提交</string>
    <string name="call_our">联系我们</string>
    <string name="call_phone">联系电话：010-53528000</string>
    <string name="call_email">电子邮箱：kefu@horizoom.com.cn</string>
    <string name="feed_back_err">请输入反馈意见！</string>
    <string name="user_name">用户名：</string>
    <string name="user_custom_name">客户名称：</string>
    <string name="user_sell_name">对口销售称：</string>
    <string name="user_custom_tip">客户简介：</string>
    <string name="security_score">安全得分</string>
    <string name="waring_new_num">今日预警新闻总数</string>
    <string name="waring_news">预警新闻</string>
    <string name="complate">完成</string>
    <string name="my_word">我的关键词</string>
    <string name="my_word_tip">点击删除</string>
    <string name="base_word">备选关键词</string>
    <string name="base_word_tip">点击增加关键词</string>
    <string name="copyright">© 2015 horizoom.com,all rights reserved</string>
    <string name="title_activity_menu_list">MenuListActivity</string>
</resources>
