<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@mipmap/btn_scard"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp"
        android:paddingTop="10dp"
        android:layout_width="98dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/waringRl"
            android:clickable="true"
            android:background="@drawable/color_btn_00000000"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:textSize="13sp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@mipmap/icon_scard_03"
                android:textColor="@color/c_353535"
                android:text="@string/setting_waring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:background="@color/c_4b4748"
            android:layout_width="match_parent"
            android:layout_height="1px" />
        <RelativeLayout
            android:id="@+id/preferenceRl"
            android:clickable="true"
            android:background="@drawable/color_btn_00000000"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:textSize="13sp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@mipmap/icon_scard_06"
                android:textColor="@color/c_353535"
                android:text="@string/setting_preference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:background="@color/c_4b4748"
            android:layout_width="match_parent"
            android:layout_height="1px" />
        <RelativeLayout
            android:id="@+id/collectionRl"
            android:clickable="true"
            android:background="@drawable/color_btn_00000000"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:textSize="13sp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@mipmap/icon_scard_08"
                android:textColor="@color/c_353535"
                android:text="@string/setting_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:background="@color/c_4b4748"
            android:layout_width="match_parent"
            android:layout_height="1px" />
        <RelativeLayout
            android:id="@+id/moreRl"
            android:clickable="true"
            android:background="@drawable/color_btn_00000000"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="33dp">
            <TextView
                android:textSize="13sp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@mipmap/icon_scard_10"
                android:textColor="@color/c_353535"
                android:text="@string/setting_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>