<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/bg_login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_icon" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/login_user" />

                    <EditText
                        android:id="@+id/nameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17dp"
                        android:background="@color/c_00000000"
                        android:hint="@string/login_user_hint"
                        android:singleLine="true"
                        android:textColor="@color/c_ffffff"
                        android:textColorHint="@color/c_ffffff"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/login_pwd" />

                    <EditText
                        android:id="@+id/pwdEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17dp"
                        android:background="@color/c_00000000"
                        android:hint="@string/login_pwd_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/c_ffffff"
                        android:textColorHint="@color/c_ffffff"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_btn"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@drawable/btn_text_color_ffffff"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/registBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/c_00000000"
                        android:gravity="center"
                        android:text="@string/login_register"
                        android:textColor="@drawable/btn_text_color_ffffff"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/c_ffffff" />

                    <Button
                        android:id="@+id/forgetBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/c_00000000"
                        android:gravity="center"
                        android:text="@string/login_forget_pwd"
                        android:textColor="@drawable/btn_text_color_ffffff"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1">

                <cn.com.myframe.view.MyBounceListView.MyBounceListview
                    android:id="@+id/newList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"></cn.com.myframe.view.MyBounceListView.MyBounceListview>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>